Fix masthead logo glitch on IE8

--- a/src/style/Textpattern/sass/ie8.scss
+++ b/src/style/Textpattern/sass/ie8.scss
@@ -29,7 +29,7 @@
     @include grid-span(8, 1, $options: 'both');
 }
 
-h1.masthead {
+h1.masthead a {
     @include svg-graphic(branding/textpattern/textpattern, png, 320px, 52px);
 
     width: 320px;
